# power-profiles-switcher

./: Cargo.toml  build.rs
src/: lib.rs  login1_user.rs  main.rs  power_profiles.rs  sensors.rs  upower.rs
