[package]
name = "power-profiles-switcher"
version = "0.1.0"
edition = "2021"
authors = ["Quang Ngô <ngoquang2708@gmail.com>"]

[dependencies]
futures-util = "0.3"
lm-sensors = "0.3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
zbus = { version = "5", default-features = false, features = ["tokio"] }
